stage03/cert-manager/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: observability
  labels:
    internal-web-gateway-access: "true"
    trust.tc.jku.internal/internal-ca: "true"
