stage03/cert-manager/manifests/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal-web
  namespace: observability
  annotations:
    cert-manager.io/cluster-issuer: tc-jku-web-ca
    cert-manager.io/duration: 168h
    cert-manager.io/renew-before: 48h
    cert-manager.io/private-key-algorithm: ECDSA
    cert-manager.io/private-key-size: "256"
    cert-manager.io/private-key-encoding: PKCS8
    cert-manager.io/private-key-rotation-policy: Always
    cert-manager.io/usages: digital signature,server auth
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 192.168.200.221
  listeners:
    - name: grafana
      hostname: grafana.tc.jku.internal
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              internal-web-gateway-access: "true"
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: grafana-tls
    - name: hubble
      hostname: hubble.tc.jku.internal
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              internal-web-gateway-access: "true"
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: hubble-tls
    - name: demo-service
      hostname: demo.tc.jku.internal
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              internal-web-gateway-access: "true"
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: demo-service-tls
    - name: authentik
      hostname: authentik.tc.jku.internal
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              internal-web-gateway-access: "true"
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: authentik-tls
